fixed inconsisted count position on mobile and desktop

--- a/src/styles/Cart/CartCount.module.css
+++ b/src/styles/Cart/CartCount.module.css
@@ -9,6 +9,6 @@
   width: 1.3rem;
   height: 1.3rem;
   margin: 0;
-  top: -5px;
+  top: -25%;
   right: 0;
 }
